Update events, draft of Java 23 post